Removed MaxPermSize from MAVEN_OPTS because Java 17 doesn't like it